[refactor] ridingpost update 이미지 수정 로직 변경 및 테스트 추가